Eksponer beregnesEtter i API
