# openapi/src/main/resources/rapportering-api.yaml
@@ -330,6 +330,7 @@ components:
     Rapporteringsperiode:
       required:
         - periodeId
+        - beregnesEtter
         - fraOgMed
         - tilOgMed
         - status
@@ -339,6 +340,9 @@ components:
         id:
           type: string
           format: uuid
+        beregnesEtter:
+          format: date
+          type: string
         fraOgMed:
           format: date
           type: string
